Fix z-index

--- a/src/components/common/EthHashInfo/styles.module.css
+++ b/src/components/common/EthHashInfo/styles.module.css
@@ -8,7 +8,6 @@
   flex-direction: column;
   justify-content: center;
   position: absolute;
-  z-index: 1;
   top: 0;
   left: 0;
   border-radius: 100%;
